--- a/style.css
+++ b/style.css
@@ -1,15 +1,158 @@
 /*
 Theme Name: Sol's Services Theme
 Author: Tin Baltazar
-Version: 1.0.0
+Version: 1.0.1
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{
-    background-color: orange;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 .body-container{
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+/* Typography */
+.headline, .h1, .h2, .h3, .h4, .h4-uppercase, .button {
+    font-weight: 600;
+}
+
+.headline {
+    font-size: 72px;
+}
+
+.h1 {
+    font-size: 56px;
+}
+
+.h2 {
+    font-size: 48px;
+}
+
+.h3 {
+    font-size: 32px;
+}
+
+.h4, .h4-uppercase {
+    font-size: 24px;
+}
+
+.h4-uppercase {
+    text-transform: capitalize;
+}
+
+.h4-uppercase a {
+    color: #522f1c;
+}
+
+.h4-uppercase a:hover {
+    text-decoration: underline;
+}
+
+.paragraph1 {
+    font-size: 18px;
+}
+
+.paragraph2 {
+    font-size: 16px;
+}
+
+.button {
+    font-size: 20px;
+}
+
+.hyperlink {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.site-title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+/* Header */
+header {
+    background-color: #522f1c;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px;
+}
+
+header a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.logo-container {
+    object-fit: contain;
+    width: 68px;
+    height: 68px;
+}
+
+.logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+}
+
+.logo:hover img {
+    rotate: 30deg;
+    scale: 1.04;
+    transition: 1.2s;
+}
+
+/* Menu */
+.menu {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 3em;
+}
+
+/* Book now button - header */
+.header-menu li:last-child {
+    background-color: #FFB129;
+    padding: 11px 23px;
+    border-radius: 10px;
+}
+
+.header-menu li:last-child:hover {
+    background-color: #F2C48D;
+    text-decoration: none;
+}
+
+.header-menu li:last-child a {
+    color: #0d0d0d;
+}
+
+/* Services - header */
+.header-menu li:nth-child(2)::after {
+    content: "▾";
+    padding-left: 5px;
+    color: #fff;
+}
+
+/* Header menu */
+.header-menu li:hover {
+    text-decoration: underline;
+    color: #fff;
+}
+
+.sub-menu {
+    display: none;
 }
