--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Sol's Services Theme
 Author: Tin Baltazar
-Version: 1.0.1
+Version: 1.0.2
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -90,6 +90,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 40px;
+    position: relative;
 }
 
 header a {
@@ -125,25 +126,19 @@ header a {
 }
 
 /* Book now button - header */
-.header-menu li:last-child {
+#menu-item-17 {
     background-color: #FFB129;
     padding: 11px 23px;
     border-radius: 10px;
 }
 
-.header-menu li:last-child:hover {
+#menu-item-17:hover {
     background-color: #F2C48D;
     text-decoration: none;
 }
 
-.header-menu li:last-child a {
+#menu-item-17 a {
     color: #0d0d0d;
-}
-
-/* Services - header */
-.header-menu li:nth-child(2)::after {
-    content: "   ▾";
-    color: #fff;
 }
 
 /* Header menu */
@@ -152,6 +147,27 @@ header a {
     color: #fff;
 }
 
+#menu-item-21 {
+    position: relative;
+}
+
 .sub-menu {
+    position: absolute;
+    background-color: #522f1cd7;
+    top: 20px;
+    list-style: none;
+    padding: 50px 30px 20px 30px;
+    flex-direction: column;
+    gap: 20px;
+    display: none;
+    width: 200px;
+    align-items: end;
+}
+
+#menu-item-21:hover > .sub-menu {
+    display: flex;
+}
+
+.hidden {
     display: none;
 }
