--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header a {
 .logo:hover img {
     rotate: 30deg;
     scale: 1.04;
-    transition: 1.2s;
+    transition: 1.2s ease-in-out;
 }
 
 /* Menu */
@@ -143,6 +143,10 @@ header a {
 }
 
 /* Header menu */
+.header nav li {
+    transition: 0.3s ease-out;
+}
+
 .header-menu li:hover {
     text-decoration: underline;
     color: #522f1c;
@@ -171,6 +175,21 @@ header a {
 
 .hidden, .toggle-nav {
     display: none;
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+  
+.bar{
+    display: block;
+    width: 44px;
+    height: 5px;
+    margin: 8px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: #522f1c;
 }
 
 /* FOOTER */
@@ -276,32 +295,46 @@ footer {
     header nav .menu {
         display: flex;
         flex-direction: column;
-        position: absolute;
-        top: 100px;
-        right: 0;
-        left: 0;
         z-index: 1000;
         align-items: end;
         background-color: #fff;
-        padding: 20px 20px 60px 20px;
+        padding: 30px 20px 60px 20px;
         margin: 0;
+        position: absolute;
+        left: -100%;
+        top: 100px;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
     }
 
     header nav .menu a {
         color: #522f1c;
     }
 
-    .toggle-nav {
-        display: inline-block !important;
-        color: #522f1c;
-        transition: color linear 0.15s;
-        font-size: 44px;
+    header nav .menu.active {
+        left: 0;
     }
 
-    .toggle-nav:hover, .toggle-nav.active {
-        text-decoration: none;
-        color: #F2C48D;
-    } 
+    .hamburger{
+        display: block;
+        color: #522f1c;
+        width: 44px;
+        height: 44px;
+    }
+    
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(13px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-13px) rotate(-45deg);
+    }
 
 
     #menu-item-21 {
@@ -372,6 +405,31 @@ footer {
 
     footer {
         padding-left: 10px;
+    }
+
+    .hamburger {
+        width: 45px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .bar {
+        width: 30px;
+        margin: 3px auto;
+        height: 4px;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(10px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-10px) rotate(-45deg);
     }
 
 
