--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Sol's Services Theme
 Author: Tin Baltazar
-Version: 1.0.4
+Version: 1.0.5
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -24,6 +24,7 @@ img {
 /* Typography */
 .headline, .h1, .h2, .h3, .h4, .h4-uppercase, .button {
     font-weight: 600;
+    margin: 0;
 }
 
 .headline {
@@ -200,6 +201,7 @@ footer {
     background-color: #0F2D75;
     color: #fff;
     align-items: start;
+    margin-top: 60px;
 }
 
 .footer-text-container {
@@ -283,6 +285,54 @@ footer {
 
 .button-style a:hover {
     background-color: #F2C48D;
+}
+
+.landing-services {
+    display: flex;
+    flex-direction: column;
+    padding: 0 40px;
+    gap: 30px;
+    margin: 30px 0;
+}
+
+.landing-services .h2 {
+    color: #0F2D75;
+}
+
+.featured-services-cards {
+    display: flex;
+    gap: 40px;
+}
+
+.featured-card {
+    flex: 1;
+    position: relative;
+}
+
+.featured-card img {
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.featured-title {
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(242, 242, 242, 0.84);
+    color: #0d0d0d;
+    right: 0;
+    left: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 20px;
+}
+
+.featured-btn {
+    align-self: end;
+    color: #0d0d0d;
+    background-color: #FFB129;
+    padding: 11px 0;
+    border-radius: 10px;
+    text-decoration: none;
 }
 
 
