Finished gardening page for desktop

--- a/style.css
+++ b/style.css
@@ -306,6 +306,13 @@ footer {
     margin: 40px 0 50px 0;
 }
 
+.sub-title {
+    color: #081C4B;
+    padding: 0 40px;
+    margin: 40px 0 50px 0;
+    font-size: 48px;
+}
+
 .featured-services-cards {
     display: flex;
     gap: 40px;
@@ -445,7 +452,7 @@ footer {
     line-height: 1.5;
 }
 
-.nivoSlider img, .service-img-container img {
+.nivoSlider img, .service-img-container img, .service-image-wrapper img {
     border-radius: 10px;
 }
 
@@ -516,7 +523,64 @@ footer {
     margin: 40px 0 60px 0;
 }
 
+.gardening-service i {
+    color: #0d0d0d;
+    font-size: 60px;
+}
 
+.gardening-service {
+    text-align: center;
+}
+
+.offerings-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    grid-auto-rows: minmax(150px,auto);
+    place-content: center;
+    gap: 60px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+hr {
+    color: #9B9B9B;
+}
+
+.service-project-section {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin-bottom: 50px;
+}
+
+.service-before-after-gallery {
+    display: flex;
+    gap: 30px;
+    padding: 0 40px;
+}
+
+.service-before, .service-after {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.name-before, .name-after {
+    font-size: 24px;
+}
+
+.name-before::after {
+    content: '(before)';
+}
+
+.name-after::after {
+    content: '(after)';
+}
+
+.service-image-wrapper {
+    height: 432px;
+}
 
 
 
@@ -624,6 +688,10 @@ footer {
     
     .page-title {
         font-size: 32px !important;
+    }
+
+    .sub-title {
+        font-size: 32px;
     }
 
     .our-team-div {
@@ -777,6 +845,10 @@ footer {
     .page-title {
         margin: 30px 0;
         padding: 0 5%;
+    }
+
+    .sub-title {
+        font-size: 20px;
     }
 
     .people-container {
