--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
-.page-content {
+/* .page-content {
     max-width: 1440px;
     margin: 0 auto;
-}
+} */
 
 .body-container{
     min-height: 100vh;
@@ -388,7 +388,7 @@ footer {
     align-items: start;
 }
 
-.about-page-info img, .person-img-wrapper img, .gardening-image-wrapper img {
+.about-page-info img, .person-img-wrapper img, .main-service-image-wrapper img {
     object-fit: cover;
     border-radius: 10px;
 }
@@ -458,7 +458,7 @@ footer {
     line-height: 1.5;
 }
 
-.nivoSlider img, .service-img-container img, .service-image-wrapper img {
+.nivoSlider img, .service-img-container img, .service-image-wrapper img, .portfolio-item img {
     border-radius: 10px;
 }
 
@@ -496,21 +496,21 @@ footer {
     color: #081c4b;
 }
 
-.gardening-intro {
+.main-service-intro {
     padding: 0 40px;
     border-bottom: 1px solid #9B9B9B;
 }
 
-.gardening-image-div {
+.main-service-image-div {
     position: relative;
 }
 
-.gardening-image-wrapper {
+.main-service-image-wrapper {
     height: 480px;
     width: 100%;
 }
 
-.gardening-price-div {
+.main-service-price-div {
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
@@ -524,7 +524,7 @@ footer {
     border-bottom-right-radius: 10px;
 }
 
-.gardening-blurb {
+.main-service-blurb {
     font-size: 18px;
     line-height: 1.5;
     margin: 40px 0 60px 0;
@@ -590,6 +590,18 @@ hr {
 .service-image-wrapper {
     height: 432px;
 }
+
+.project-portfolio-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(539px,1fr));
+    grid-auto-rows: minmax(496px,auto);
+    place-content: center;
+    gap: 60px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
 
 
 
@@ -726,11 +738,11 @@ hr {
         font-size: 32px;
     }
 
-    .gardening-price-div h3 {
+    .main-service-price-div h3 {
         font-size: 24px;
     }
 
-    .gardening-blurb {
+    .main-service-blurb {
         font-size: 16px;
     }
 
@@ -741,6 +753,11 @@ hr {
 
     .service-image-wrapper {
         height: 254px;
+    }
+
+    .project-portfolio-section {
+        grid-template-columns: repeat(auto-fill, minmax(209px,1fr));
+        grid-auto-rows: minmax(284px,auto);
     }
 
 
@@ -917,15 +934,15 @@ hr {
         height: auto;
     }
 
-    .gardening-intro, .landscaping-intro {
+    .main-service-intro, .landscaping-intro {
         padding: 0 20px;
     }
 
-    .gardening-price-div {
+    .main-service-price-div {
         flex-direction: column;
     }
 
-    .gardening-blurb p {
+    .main-service-blurb p {
         font-size: 16px !important;
     }
 
@@ -941,6 +958,19 @@ hr {
 
     .service-btn {
         padding-right: 9px;
+    }
+
+    .project-portfolio-section {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(391px,1fr));
+        grid-auto-rows: minmax(360px,auto);
+        place-content: center;
+        gap: 60px;
+        padding: 0;
+    }
+
+    .project-portfolio-section img {
+        border-radius: 0;
     }
 
     
