Added go to top button

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Sol's Services Theme
 Author: Tin Baltazar
-Version: 1.0.9
+Version: 1.1.0
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -681,6 +681,42 @@ div.wpforms-container-full textarea {
     border-radius: 10px !important;
     font-size: 18px !important;
 }
+
+.go-top-btn-wrapper {
+    width: 50px;
+    height: 50px;
+    background-color: #ad5b0e;
+    border-radius: 10px;
+    font-size: 50px;
+    position: fixed;
+    right: 5%;
+    bottom: 160px;
+    z-index: 10000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.go-top-btn-wrapper:hover{
+    background-color: #bc6f27;
+}
+
+.go-top-btn-wrapper i {
+    color: #fff;
+    font-size: 30px;
+}
+
+.go-top-btn-wrapper a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.no-display {
+    display: none !important;
+}
+
 
 
 /* BIG SCREENS */
