fixed paragraph margin

--- a/style.css
+++ b/style.css
@@ -400,6 +400,10 @@ footer {
     font-size: 18px;
 }
 
+.about-txt p {
+    margin: 0 0 18px 0;
+}
+
 .people-container {
     display: flex;
     flex-direction: column;
